--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -1,134 +1,34 @@
 <app-nav-bar></app-nav-bar>
-<section class="mx-5 rounded-3xl mt-24 border-2 border-dashed border-gray-200 ">
-  <div class="block px-4 py-2 font-medium text-center text-3xl text-gray-700 rounded-t-3xl ">
-    السلة
-  </div>
-  <div class="max-h-96 overflow-x-scroll border-2 border-gray-200 border-dashed rounded-3xl m-5  p-2">
-    <div class="relative overflow-x-auto  sm:rounded-3xl ">
-      <table class="w-full text-sm text-center text-gray-500 rounded-3xl p-4 ">
-        <thead class="text-xl text-gray-700 uppercase  rounded-3xl">
-          <tr>
-            <th scope="col" class="px-6 py-3">
-              <span class="sr-only">Image</span>
-            </th>
-            <th scope="col" class="px-6 py-3">
-              المنتج
-            </th>
-            <th scope="col" class="px-6 py-3">
-              الكمية
-            </th>
-            <th scope="col" class="px-6 py-3">
-              السعر
-            </th>
-            <th scope="col" class="px-6 py-3">
-              الاجراء
-            </th>
-          </tr>
-        </thead>
-        <tbody class=" rounded-3xl ">
-          <tr class=" border-b rounded-3xl">
-            <td class="w-32 p-4">
-              <img src="" alt=" ">
-            </td>
-            <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-              Apple Watch
-            </td>
-            <td class="px-6 py-4">
-              <div class="flex items-center space-x-3">
-                <button
-                  class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                  type="button">
-                  <span class="sr-only">Quantity button</span>
-                  <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd">
-                    </path>
-                  </svg>
-                </button>
-                <div>
-                  <input type="number" id="first_product"
-                    class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                    placeholder="1" required>
-                </div>
-                <button
-                  class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                  type="button">
-                  <span class="sr-only">Quantity button</span>
-                  <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                      clip-rule="evenodd"></path>
-                  </svg>
-                </button>
-              </div>
-            </td>
-            <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-              $599
-            </td>
-            <td class="px-6 py-4">
-              <a class="font-medium text-red-600 hover:underline">حذف</a>
-            </td>
-          </tr>
-          <tr class=" border-b rounded-b-3xl ">
-            <td class="w-32 p-4">
-              <img src="" alt=" ">
-            </td>
-            <td class="px-6 py-4 font-semibold text-gray-900 ">
-              Apple Watch
-            </td>
-            <td class="px-6 py-4">
-              <div class="flex items-center space-x-3">
-                <button
-                  class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                  type="button">
-                  <span class="sr-only">Quantity button</span>
-                  <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd">
-                    </path>
-                  </svg>
-                </button>
-                <div>
-                  <input type="number" id="first_product"
-                    class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                    placeholder="1" required>
-                </div>
-                <button
-                  class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                  type="button">
-                  <span class="sr-only">Quantity button</span>
-                  <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                      clip-rule="evenodd"></path>
-                  </svg>
-                </button>
-              </div>
-            </td>
-            <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-              $599
-            </td>
-            <td class="px-6 py-4">
-              <a class="font-medium text-red-600 hover:underline">حذف</a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<section class="mx-5 rounded-3xl mt-24 border-2 border-dashed border-gray-200">
+  <div class="antialiased bg-gray-50 :bg-gray-900 rounded-3xl">
+    <main class="p-4  h-auto pt-20">
 
-  </div>
-  <a routerLink="/index"
-    class="px-10 py-3 mr-10 mb-4 w-52 rounded-3xl text-black text-center font-semibold hover:underline ">
-    <svg class="w-5 h-5 mr-1" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18"></path>
-    </svg>
-    متابعة التصفح
-  
-  </a>
-      <button type="submit"
-        class="place-order-button mr-10 mb-4 w-52 rounded-3xl border border-transparent bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">انشاء طلب 
-         </button>
+      <div class="grid grid-cols-3 gap-4 mb-4">
+        <div class="border-2 border-dashed rounded-3xl border-gray-300 md:max-w-2xl col-span-full sm:col-span-1">
+          <a class="flex flex-col items-center  border border-gray-200 rounded-3xl shadow md:flex-row h-full ">
+            <img class="object-cover w-full rounded-t-lg  md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src=""
+              alt="">
+            <div class="flex flex-col justify-between p-4 leading-normal text-left">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">User name</h5>
+              <p class=" font-normal text-gray-700 ">Email</p>
+              <h3 class=" text-xl  tracking-tight ">email@mail.com</h3>
+              <p class=" font-normal text-gray-700 ">Phone Number</p>
+              <h3 class=" text-xl  tracking-tight ">01150567130</h3>
+              <p class=" font-normal text-gray-700 ">Role</p>
+              <h3 class=" text-xl  tracking-tight ">Admin</h3>
+            </div>
+          </a>
+          
+          </div>
+        <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
+          <section class="">
+            <h3 class="text-center">cart items</h3>
+          </section>
+                </div>
+                </div>
+                <div class="border-2 border-dashed rounded-3xl border-gray-300 :border-gray-600 h-96 mb-4">
+                  <h3 class="text-center">Payment</h3>
+                </div>
+                </main>
+                </div>
 </section>
