--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -1,10 +1,20 @@
 <app-nav-bar></app-nav-bar>
 <section class="mx-5 rounded-3xl mt-24 border-2 border-dashed border-gray-200">
   <div class="antialiased bg-gray-50 :bg-gray-900 rounded-3xl">
-    <main class="p-4  h-auto pt-20">
-
+    <main class="p-4  h-auto pt-20 relative">
+      <div
+        class="absolute top-[0%] left-0 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+      </div>
+      <div
+        class="absolute top-[25%] right-0 w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+      </div>
+      <div
+        class="absolute bottom-0 right-12 w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      </div>
       <div class="grid grid-cols-3 gap-4 mb-4">
+        <!-- animated blured divs -->
         <div class="border-2 border-dashed rounded-3xl border-gray-300 md:max-w-2xl col-span-full sm:col-span-1">
+          
           <a class="flex flex-col items-center  border border-gray-200 rounded-3xl shadow md:flex-row h-full ">
             <img class="object-cover w-full rounded-t-lg  md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src=""
               alt="">
@@ -21,8 +31,165 @@
           
           </div>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
-          <section class="">
-            <h3 class="text-center">cart items</h3>
+          <section class="border-2 border-dashed border-gray-200 rounded-3xl w-full p-4 sm:p-5">
+            <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto">
+              <table class="w-full text-sm text-left text-gray-500 ">
+                <thead class=" text-xs text-gray-700 uppercase bg-gray-50 rounded-t-3xl">
+                  <tr>
+                    <th scope="col" class="px-6 py-3">
+                      <span class="sr-only">Image</span>
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      Order Id
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      Products List
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      Qty
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      Price
+                    </th>
+                    <th scope="col" class="px-6 py-3 mx-1">
+                      Action
+                    </th>
+                  </tr>
+                </thead>
+                <tbody class=" ">
+                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
+                    <td class="w-32 p-4">
+                      <img src="" alt="Apple Watch">
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      #asd123
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      Apple Watch , HeadPhone
+                    </td>
+                    <td class="px-6 py-4">
+                      <div class="flex items-center space-x-3">
+                        <div>
+                          <input type="number" id="first_product"
+                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
+                            placeholder="1" disabled>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      $599
+                    </td>
+                    <td class="px-6 py-4">
+                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
+                    </td>
+                  </tr>
+                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
+                    <td class="w-32 p-4">
+                      <img src="" alt="Apple Watch">
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      #asd123
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      Apple Watch , HeadPhone
+                    </td>
+                    <td class="px-6 py-4">
+                      <div class="flex items-center space-x-3">
+                        <div>
+                          <input type="number" id="first_product"
+                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
+                            placeholder="1" disabled>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      $599
+                    </td>
+                    <td class="px-6 py-4">
+                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
+                    </td>
+                  </tr>
+                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
+                    <td class="w-32 p-4">
+                      <img src="" alt="Apple Watch">
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      #asd123
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      Apple Watch , HeadPhone
+                    </td>
+                    <td class="px-6 py-4">
+                      <div class="flex items-center space-x-3">
+                        <div>
+                          <input type="number" id="first_product"
+                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
+                            placeholder="1" disabled>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      $599
+                    </td>
+                    <td class="px-6 py-4">
+                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
+                    </td>
+                  </tr>
+                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
+                    <td class="w-32 p-4">
+                      <img src="" alt="Apple Watch">
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      #asd123
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      Apple Watch , HeadPhone
+                    </td>
+                    <td class="px-6 py-4">
+                      <div class="flex items-center space-x-3">
+                        <div>
+                          <input type="number" id="first_product"
+                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
+                            placeholder="1" disabled>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      $599
+                    </td>
+                    <td class="px-6 py-4">
+                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
+                    </td>
+                  </tr>
+                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
+                    <td class="w-32 p-4">
+                      <img src="" alt="Apple Watch">
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      #asd123
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      Apple Watch , HeadPhone
+                    </td>
+                    <td class="px-6 py-4">
+                      <div class="flex items-center space-x-3">
+                        <div>
+                          <input type="number" id="first_product"
+                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
+                            placeholder="1" disabled>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                      $599
+                    </td>
+                    <td class="px-6 py-4">
+                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </section>
                 </div>
                 </div>
