--- a/src/app/pages/profile/components/home/home.component.html
+++ b/src/app/pages/profile/components/home/home.component.html
@@ -71,7 +71,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="bg-white border-b :bg-gray-800 :border-gray-700">
+                      <tr class=" border-b hover:bg-gray-50 ">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap :text-white">
                           Apple MacBook Pro 17"
                         </th>
@@ -83,34 +83,6 @@
                         </td>
                         <td class="px-6 py-4">
                           $2999
-                        </td>
-                      </tr>
-                      <tr class="bg-white border-b :bg-gray-800 :border-gray-700">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap :text-white">
-                          Microsoft Surface Pro
-                        </th>
-                        <td class="px-6 py-4">
-                          White
-                        </td>
-                        <td class="px-6 py-4">
-                          Laptop PC
-                        </td>
-                        <td class="px-6 py-4">
-                          $1999
-                        </td>
-                      </tr>
-                      <tr class="bg-white :bg-gray-800">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap :text-white">
-                          Magic Mouse 2
-                        </th>
-                        <td class="px-6 py-4">
-                          Black
-                        </td>
-                        <td class="px-6 py-4">
-                          Accessories
-                        </td>
-                        <td class="px-6 py-4">
-                          $99
                         </td>
                       </tr>
                     </tbody>
