--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -33,162 +33,73 @@
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
           <section class="border-2 border-dashed border-gray-200 rounded-3xl w-full p-4 sm:p-5">
             <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto">
-              <table class="w-full text-sm text-left text-gray-500 ">
-                <thead class=" text-xs text-gray-700 uppercase bg-gray-50 rounded-t-3xl">
-                  <tr>
-                    <th scope="col" class="px-6 py-3">
-                      <span class="sr-only">Image</span>
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      Order Id
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      Products List
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      Qty
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      Price
-                    </th>
-                    <th scope="col" class="px-6 py-3 mx-1">
-                      Action
-                    </th>
+          <table class="w-full text-sm text-center text-gray-500 ">
+            <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
+              <tr>
+                <th scope="col" class="px-6 py-3">
+                  <span class="sr-only">Image</span>
+                </th>
+                <th scope="col" class="px-6 py-3">
+                  المنتج
+                  </th>
+                  <th scope="col" class="px-6 py-3">
+                  الكمية
+                  </th>
+                  <th scope="col" class="px-6 py-3">
+                  السعر
+                  </th>
+                  <th scope="col" class="px-6 py-3">
+                  الاجراء
+                  </th>
                   </tr>
-                </thead>
-                <tbody class=" ">
-                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                    <td class="w-32 p-4">
-                      <img src="" alt="Apple Watch">
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      #asd123
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      Apple Watch , HeadPhone
-                    </td>
-                    <td class="px-6 py-4">
-                      <div class="flex items-center space-x-3">
-                        <div>
-                          <input type="number" id="first_product"
-                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                            placeholder="1" disabled>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      $599
-                    </td>
-                    <td class="px-6 py-4">
-                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                    </td>
+                  </thead>
+            <tbody>
+              <tr class=" border-b hover:bg-gray-50" *ngFor="let item of cartItems">
+                <td class="w-32 p-4">
+                  <img [src]="item.product?.product_img" [alt]="item.product?.description">
+                  </td>
+                  <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                  {{item.product?.name? item.product.name : 'N/A'}}
+                  </td>
+                  <td class="px-6 py-4">
+                    <div class="flex items-center space-x-3">
+                    <button (click)="decreaseCartItemQty(item.id,item)"
+                      class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
+                      type="button">
+                      <span class="sr-only">Quantity button</span>
+                      <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd">
+                        </path>
+                      </svg>
+                    </button>
+                    <div>
+                      <!-- <input type="number" id="first_product"
+                                                      class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
+                                [value]="item.quantity"
+                                [placeholder]="item.quantity" required> -->
+                      <label
+                        class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item.quantity}}</label>
+                    </div>
+                    <button (click)="increaseCartItemQty(item.id,item)"
+                      class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
+                      type="button">
+                      <span class="sr-only">Quantity button</span>
+                      <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+                          clip-rule="evenodd"></path>
+                      </svg>
+                    </button>
+                  </div>
+                  </td>
+                  <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+                  ${{item.product?.price ? item.product.price :"N/A"}}
+                  </td>
+                  <td class="px-6 py-4">
+                  <a class="font-medium text-red-600 hover:underline" (click)="deleteCartItem(item.id)">حذف</a>
+                  </td>
                   </tr>
-                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                    <td class="w-32 p-4">
-                      <img src="" alt="Apple Watch">
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      #asd123
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      Apple Watch , HeadPhone
-                    </td>
-                    <td class="px-6 py-4">
-                      <div class="flex items-center space-x-3">
-                        <div>
-                          <input type="number" id="first_product"
-                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                            placeholder="1" disabled>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      $599
-                    </td>
-                    <td class="px-6 py-4">
-                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                    </td>
-                  </tr>
-                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                    <td class="w-32 p-4">
-                      <img src="" alt="Apple Watch">
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      #asd123
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      Apple Watch , HeadPhone
-                    </td>
-                    <td class="px-6 py-4">
-                      <div class="flex items-center space-x-3">
-                        <div>
-                          <input type="number" id="first_product"
-                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                            placeholder="1" disabled>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      $599
-                    </td>
-                    <td class="px-6 py-4">
-                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                    </td>
-                  </tr>
-                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                    <td class="w-32 p-4">
-                      <img src="" alt="Apple Watch">
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      #asd123
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      Apple Watch , HeadPhone
-                    </td>
-                    <td class="px-6 py-4">
-                      <div class="flex items-center space-x-3">
-                        <div>
-                          <input type="number" id="first_product"
-                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                            placeholder="1" disabled>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      $599
-                    </td>
-                    <td class="px-6 py-4">
-                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                    </td>
-                  </tr>
-                  <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                    <td class="w-32 p-4">
-                      <img src="" alt="Apple Watch">
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      #asd123
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      Apple Watch , HeadPhone
-                    </td>
-                    <td class="px-6 py-4">
-                      <div class="flex items-center space-x-3">
-                        <div>
-                          <input type="number" id="first_product"
-                            class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                            placeholder="1" disabled>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      $599
-                    </td>
-                    <td class="px-6 py-4">
-                      <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+                  </tbody>
+                  </table>
             </div>
           </section>
                 </div>
