--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -111,13 +111,14 @@
           <h4>{{product.description}}</h4>
           <div class="flex flex-row-reverse items-center justify-between gap-x-2">
             <button role="button" (click)="postCartItem(product)" [disabled]="checkIfCartItemExists(cartItems,product.id)"
-              class="w-3xl bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200 disabled:cursor-not-allowed">
-            <svg class="w-5 h-5 hover:text-blue-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+              class="w-full bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200 disabled:cursor-not-allowed">
+            <svg class="w-5 h-5 " fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round"
                 d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z">
               </path>
             </svg>
+            اضافة الى السلة
             </button>
             <span class="bg-gray-100 border px-4 py-2 rounded-full hover:bg-gray-200">
               <svg class="w-5 h-5 text-red-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
