--- a/src/app/shared/cart/cart.component.html
+++ b/src/app/shared/cart/cart.component.html
@@ -16,11 +16,11 @@
   <div *ngIf="showCartDropdown" id="dropdownCard"
     class="z-20 absolute top-16 right-1 w-full  max-w-[30%] bg-white divide-y divide-gray-100 rounded-3xl shadow p-1"
     aria-labelledby="dropdownCardButton">
-    <div class="block px-4 py-2 font-medium text-center text-gray-700 rounded-t-lg bg-gray-50 :bg-gray-800 :text-white">
+    <div class="block px-4 py-2 font-medium text-center text-gray-700 rounded-t-3 bg-gray-50 ">
       السلة
     </div>
     <div class="divide-y divide-gray-100 max-h-96 overflow-scroll">
-      <div class="relative overflow-x-auto shadow-md ">
+      <div class="relative shadow-md max-h-96 overflow-scroll">
         <table class="w-full text-sm text-center text-gray-500 ">
           <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
             <tr>
